# 2026_rapa_022

./: .gitignore  Embedding.ipynb  app.py  chains.py  chunking.ipynb  document_loader.ipynb  embeddings.py  pyproject.toml  test.md  vector_store.ipynb  vectorstore.py
docs/: Similarity.ipynb  chunking.ipynb  document_loader.ipynb  retriever.ipynb  vector_store.ipynb
libs/: qna_data.json  sample.txt  split_text.txt
