[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "jupyterlab>=4.6.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
]
